--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark" data-bs-theme="dark">
     <div class="container-fluid px-4">
       <a class="navbar-brand px-4" href="#">
-        <img src="img/favicon.png" alt="Logo" width="45" height="35" class="d-inline-block align-text-top">
+        <img src="favicon.png" alt="Logo" width="45" height="35" class="d-inline-block align-text-top">
         Protfolio
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -71,7 +71,7 @@
         firm driven by technology.</p>
     </div>
     <div class="col-md-5">
-      <img src="img/b.png" width="500" height="400">
+      <img src="b.png" width="500" height="400">
     </div>
   </div>
   <div class="row p-4">
@@ -128,14 +128,14 @@
         ( West Bengal Board of Secondary Education )</p>
     </div>
     <div class="col-md-5 order-md-1">
-      <img src="img/download.jpg" height="500" width="500">
+      <img src="download.jpg" height="500" width="500">
     </div>
   </div>
 
   <h1 class="text-center p-4 mb-3"><b><i> Project</i></b></h1>
   <div class="row p-4">
     <div class="col-lg-4 aos-init aos-animate" data-aos="fade-right">
-      <img src="img/p-1.png" class="img-fluid" height="200" width="500">
+      <img src="p-1.png" class="img-fluid" height="200" width="500">
     </div>
     <div class="col-lg-8 pt-4 pt-lg-0 content aos-init aos-animate" data-aos="fade-left">
       <h4 class="text-center text-warning"><b><i>SHOPPING MALL MANAGMMENT SYSTEM <br> (E-Comarce)</i></b></h4>
@@ -159,12 +159,12 @@
       </i></p>
     </div>
     <div class="col-md-5 order-md-1">
-      <img src="img/p-2.png" height="200" width="500">
+      <img src="p-2.png" height="200" width="500">
     </div>
   </div>
   <div class="row p-4">
     <div class="col-lg-4 aos-init aos-animate" data-aos="fade-right">
-      <img src="img/p-3.png" class="img-fluid" height="900" width="500">
+      <img src="p-3.png" class="img-fluid" height="900" width="500">
     </div>
     <div class="col-lg-8 pt-4 pt-lg-0 content aos-init aos-animate" data-aos="fade-left">
       <h4 class="text-center text-success"><b><i> Hotel Booking System</i></b></h4>
@@ -183,7 +183,7 @@
   <!--Google map-->
   <!--Google map-->
   <div id="map-container-google-3" class="z-depth-1-half map-container-3">
-    <img src="img/map.png" height="400" width="100%">
+    <img src="map.png" height="400" width="100%">
   </div>>
 
   <!--Google Maps-->
