--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark" data-bs-theme="dark">
         <div class="container-fluid px-4">
             <a class="navbar-brand px-4" href="#">
-                <img src="img/favicon.png" alt="Logo" width="45" height="35" class="d-inline-block align-text-top">
+                <img src="favicon.png" alt="Logo" width="45" height="35" class="d-inline-block align-text-top">
                 Protfolio
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -54,7 +54,7 @@
                 firm driven by technology.</p>
         </div>
         <div class="col-md-5">
-            <img src="img/b.png" width="500" height="400">
+            <img src="b.png" width="500" height="400">
         </div>
     </div>
     <div class="row p-4">
@@ -105,7 +105,7 @@
             ( West Bengal Board of Secondary Education )</p>
     </div>
     <div class="col-md-5 order-md-1">
-        <img src="img/download.jpg" height="500" width="500">
+        <img src="download.jpg" height="500" width="500">
     </div>
 </div>
 
@@ -113,7 +113,7 @@
 <!--Google map-->
 <!--Google map-->
 <div id="map-container-google-3" class="z-depth-1-half map-container-3">
-    <img src="img/map.png" height="400" width="100%">
+    <img src="map.png" height="400" width="100%">
   </div>
   
   <!--Google Maps-->
