--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
   <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark" data-bs-theme="dark">
     <div class="container-fluid px-4">
       <a class="navbar-brand px-4" href="#">
-        <img src="img/favicon.png" alt="Logo" width="45" height="35" class="d-inline-block align-text-top">
+        <img src="favicon.png" alt="Logo" width="45" height="35" class="d-inline-block align-text-top">
         Protfolio
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -49,7 +49,7 @@
       <div class="col d-flex align-items-start">
         <div
           class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-          <img src="img/Weblogo.png" height="80" width="80">
+          <img src="Weblogo.png" height="80" width="80">
         </div>
         <div>
           <h3 class="fs-2">ABOUT ME</h3>
@@ -66,7 +66,7 @@
       <div class="col d-flex align-items-start">
         <div
           class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-          <img src="img/eud.png" height="80" width="80">
+          <img src="eud.png" height="80" width="80">
             <use xlink:href="#cpu-fill"></use>
           </svg>
         </div>
@@ -82,7 +82,7 @@
       <div class="col d-flex align-items-start">
         <div
           class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-          <img src="img/eud.png" height="80" width="80">
+          <img src="eud.png" height="80" width="80">
             <use xlink:href="#tools"></use>
           </svg>
         </div>
@@ -103,7 +103,7 @@
         <div class="col d-flex align-items-start">
           <div
             class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-            <img src="img/logo1.png" height="80" width="80">
+            <img src="logo1.png" height="80" width="80">
               <use xlink:href="#toggles2"></use>
             </svg>
           </div>
@@ -128,7 +128,7 @@
         <div class="col d-flex align-items-start">
           <div
             class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-            <img src="img/logo2.png" height="80" width="80">
+            <img src="logo2.png" height="80" width="80">
               <use xlink:href="#cpu-fill"></use>
             </svg>
           </div>
@@ -150,7 +150,7 @@
         <div class="col d-flex align-items-start">
           <div
             class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-            <img src="img/logo1.png" height="80" width="80">
+            <img src="logo1.png" height="80" width="80">
               <use xlink:href="#tools"></use>
             </svg>
           </div>
@@ -180,7 +180,7 @@
       <div class="col d-flex align-items-start">
         <div
           class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-2 flex-shrink-0 me-3">
-          <img src="img/logo2.png" height="80" width="80">
+          <img src="logo2.png" height="80" width="80">
             <use xlink:href="#toggles2"></use>
           </svg>
         </div>
@@ -202,7 +202,7 @@
       <div class="col d-flex align-items-start">
         <div
           class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-          <img src="img/logo1.png" height="80" width="80">
+          <img src="logo1.png" height="80" width="80">
             <use xlink:href="#cpu-fill"></use>
           </svg>
         </div>
@@ -224,7 +224,7 @@
       <div class="col d-flex align-items-start">
         <div
           class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-          <img src="img/logo2.png" height="80" width="80">
+          <img src="logo2.png" height="80" width="80">
             <use xlink:href="#tools"></use>
           </svg>
         </div>
@@ -249,7 +249,7 @@
   <h1 class="text-center p-4 mb-3"><b><i>Project</i></b></h1>
   <div class="row p-4">
     <div class="col-lg-4 aos-init aos-animate" data-aos="fade-right">
-      <img src="img/p-1.png"  height="500" width="500" class="img-fluid">
+      <img src="p-1.png"  height="500" width="500" class="img-fluid">
     </div>
     <div class="col-lg-8 pt-4 pt-lg-0 content aos-init aos-animate" data-aos="fade-left">
       <h4 class="text-center text-warning"><b><i> SHOPPING MALL MANAGMMENT SYSTEM <br> (E-Comarce)</i></b></h4>
@@ -273,12 +273,12 @@
       </i></p>
     </div>
     <div class="col-md-5 order-md-1">
-      <img src="img/p-2.png" height="300" width="500">
+      <img src="p-2.png" height="300" width="500">
     </div>
   </div>
   <div class="row p-4">
     <div class="col-lg-4 aos-init aos-animate" data-aos="fade-right">
-      <img src="img/p-3.png" class="img-fluid" height="900" width="500">
+      <img src="p-3.png" class="img-fluid" height="900" width="500">
     </div>
     <div class="col-lg-8 pt-4 pt-lg-0 content aos-init aos-animate" data-aos="fade-left">
       <h4 class="text-center text-success"><b><i> Hotel Booking System</i></b></h4>
@@ -300,7 +300,7 @@
   <!--Google map-->
   <!--Google map-->
   <div id="map-container-google-3" class="z-depth-1-half map-container-3">
-    <img src="img/map.png" height="400" width="100%">
+    <img src="map.png" height="400" width="100%">
   </div>
 
   <!--Google Maps-->
