--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark" data-bs-theme="dark">
         <div class="container-fluid px-4">
             <a class="navbar-brand px-4" href="#">
-                <img src="img/favicon.png" alt="Logo" width="45" height="35" class="d-inline-block align-text-top">
+                <img src="favicon.png" alt="Logo" width="45" height="35" class="d-inline-block align-text-top">
                 Protfolio
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -92,7 +92,7 @@
     <!--Google map-->
     <!--Google map-->
     <div id="map-container-google-3" class="z-depth-1-half map-container-3">
-        <img src="img/map.png" height="400" width="100%">
+        <img src="map.png" height="400" width="100%">
     </div>
 
     <!--Google Maps-->
