--- a/about.html
+++ b/about.html
@@ -64,8 +64,8 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content aos-init aos-animate" data-aos="fade-left">
             <h4 class="text-center text-warning"><b><i>FULL STACK WEB DEVELOPER &amp; WEB DEGINER</i></b></h4>
             <p class="fst-italic">
-                A professional summary allows you to introduce yourself to your recruiter. You may mention how long you've been in the industry and the programming specializations and languages you prefer. Mention some of your accomplishments to gain the recruiter’s interest. Consider keeping your summary brief to encourage the recruiter to read your other qualifications.
-            </p>
+                
+            </p>Recent computer science graduate with a passion for developing scalable web applications and working across the full stack.<br>I am looking for job with Big MNC to continue to grow my skill set while contributing to the positive outcome of making people "richer, smarter, and happier
             <div class="row text-primary">
                 <div class="col-6">
                     <ul>
@@ -84,7 +84,7 @@
                 </div>
             </div>
             <p>
-                Analyze and add your technical and soft skills relevant to a full-stack developer’s role. Technical skills you may add include coding skills, like knowledge of multiple programming languages and software relevant to the job. Some soft skills you may add are teamwork, interpersonal skills, organization, problem-solving and attention to detail.
+                Logical and results-driven full stack developer dedicated to building and optimizing user-focused websites and applications.<br>Judicious and creative when crafting effective websites, apps and platforms to propel competitive advantage and revenue growth. Technically proficient and analytical problem solver with calm and focused demeanor... 
             </p>
         </div>
     </div>
