--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   </div>
   <div class="row p-4">
     <div class="col-lg-4 aos-init aos-animate " data-aos="fade-right">
-      <img src="img/c.jpg" class="img-fluid" width="200" height="200">
+      <img src="c.jpg" class="img-fluid" width="200" height="200">
     </div>
     <div class="col-lg-8 pt-4 pt-lg-0 content aos-init aos-animate" data-aos="fade-left">
       <h4 class="text-center text-warning"><b><i> FULL STACK WEB DEVELOPER &amp; WEB DEGINER</i></b></h4>
