--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
             <h4 class="text-center text-warning"><b><i>FULL STACK WEB DEVELOPER &amp; WEB DEGINER</i></b></h4>
             <p class="fst-italic">
                 
-            </p>Recent computer science graduate with a passion for developing scalable web applications and working across the full stack.<br>I am looking for job with Big MNC to continue to grow my skill set while contributing to the positive outcome of making people "richer, smarter, and happier
+            </p>Recent computer science graduate with a passion for developing scalable web applications and working across the full stack.I am looking for job with Big MNC to continue to grow my skill set while contributing to the positive outcome of making people "richer, smarter, and happier
             <div class="row text-primary">
                 <div class="col-6">
                     <ul>
@@ -84,7 +84,7 @@
                 </div>
             </div>
             <p>
-                Logical and results-driven full stack developer dedicated to building and optimizing user-focused websites and applications.<br>Judicious and creative when crafting effective websites, apps and platforms to propel competitive advantage and revenue growth. Technically proficient and analytical problem solver with calm and focused demeanor... 
+                Logical and results-driven full stack developer dedicated to building and optimizing user-focused websites and applications.Judicious and creative when crafting effective websites, apps and platforms to propel competitive advantage and revenue growth. Technically proficient and analytical problem solver with calm and focused demeanor... 
             </p>
         </div>
     </div>
