--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </div>
       </div>
       <p>
-        Logical and results-driven full stack developer dedicated to building and optimizing user-focused websites and applications.<br>Judicious and creative when crafting effective websites, apps and platforms to propel competitive advantage and revenue growth. Technically proficient and analytical problem solver with calm and focused demeanor.. 
+        Logical and results-driven full stack developer dedicated to building and optimizing user-focused websites and applications.Judicious and creative when crafting effective websites, apps and platforms to propel competitive advantage and revenue growth. Technically proficient and analytical problem solver with calm and focused demeanor.. 
       </p>
     </div>
   </div>
