--- a/resume.html
+++ b/resume.html
@@ -87,7 +87,7 @@
           </svg>
         </div>
         <div>
-          <h3 class="fs-2">Class-XII & Class-X</h3>
+          <h3 class="fs-2">Class-XII & <br> Class-X</h3>
           <p>Banipur Baninekatun High School(H.S)
             ( West Bengal Council of Higher Secondary Education )</p>
           <a href="#" class="btn btn-primary">
