--- a/resume.html
+++ b/resume.html
@@ -262,7 +262,7 @@
         4. To view product
         User::The user was available able to see the list of products available in the shopping mall . Then he/she can purchase them by using user id and product id. Using Css , Html , JavaScript , Frameworks -- Bootstrap , jquery Backend -- Php , Database- MySql...
           </i></p><br>
-         <a href="https://sanunatta.github.io/onlineshoppingmall/">Link ::
+         <a class="text-center" href="https://sanunatta.github.io/onlineshoppingmall/">Link ::
                 </a>
     </div>
   </div>
