--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@
         3. To update information about the product
         4. To view product
         User::The user was available able to see the list of products available in the shopping mall . Then he/she can purchase them by using user id and product id. Using Css , Html , JavaScript , Frameworks -- Bootstrap , jquery Backend -- Php , Database- MySql...
-          </i></p>
+          </i></p><br>
+      <a class="text-center" href="https://sanunatta.github.io/onlineshoppingmall/">Link ::
+                </a>
     </div>
   </div>
   <div class="row featurette p-4 mb-3">
@@ -150,7 +152,9 @@
       <p class="fst-italic text-center"><i>
         It only takes a few seconds to lose a visitor’s attention, so to be sure to use these seconds smart. Your potential clients will see the visuals first and if they like what they see, they will continue looking for more details. In other words, you need an awesome and appealing presentation of your works.<br>
         The basic formula of a portfolio website would include a logo, tagline,  work,  education,  about for me, and contact information. Sometimes this works but in many cases,Basic Protfolio  implementation. To highlight your portfolio in another light, consider to include other <br> key elements that will boost your portfolio’s user experience: case studies, testimonials, blog, and even a project you’re currently working on at the moment. These are vital elements.Using Css , Html , JavaScript , Frameworks -- Bootstrap Backend -- Php...
-      </i></p>
+      </i></p><br>
+      <a  href="https://sanunatta.github.io/portfolio//resume.html">Link :::
+                </a>
     </div>
     <div class="col-md-5 order-md-1">
       <img src="p-2.png" height="200" width="500">
