--- a/index.html
+++ b/index.html
@@ -150,8 +150,12 @@
     <div class="col-md-7 text-center p-4">
       <h4 class="text-center text-danger"><b><i>Protfolio</i></b></h4>
       <p class="fst-italic text-center"><i>
-        It only takes a few seconds to lose a visitor’s attention, so to be sure to use these seconds smart. Your potential clients will see the visuals first and if they like what they see, they will continue looking for more details. In other words, you need an awesome and appealing presentation of your works.<br>
-        The basic formula of a portfolio website would include a logo, tagline,  work,  education,  about for me, and contact information. Sometimes this works but in many cases,Basic Protfolio  implementation. To highlight your portfolio in another light, consider to include other <br> key elements that will boost your portfolio’s user experience: case studies, testimonials, blog, and even a project you’re currently working on at the moment. These are vital elements.Using Css , Html , JavaScript , Frameworks -- Bootstrap Backend -- Php...
+        Summary:
+As a skilled web developer with experience in front-end and back-end development, I possess a keen eye for design and a passion for creating visually appealing and responsive websites. I have worked on various web development projects, including e-commerce sites, blogs, and corporate websites, and have honed my skills in.Using Css , Html , JavaScript , Frameworks -- Bootstrap Backend -- Php...
+
+My experience in UX/UI design and website optimization has allowed me to create websites that not only look great but also provide an exceptional user experience. I understand the importance of creating a website that is both functional and visually appealing, and I am always willing to go the extra mile to achieve that perfect balance.
+
+In creating a portfolio website, I understand the significance of showcasing my skills, accomplishments, and personality to potential clients and employers. I will bring my creativity, attention to detail, and passion for web development to create a portfolio website that is unique, impressive, and engaging.
       </i></p><br>
       <a class="btn btn-primary" href="https://sanunatta.github.io/portfolio//resume.html">Link :::
                 </a>
