--- a/index.html
+++ b/index.html
@@ -150,18 +150,18 @@
     <div class="col-md-7 text-center p-4">
       <h4 class="text-center text-danger"><b><i>Protfolio</i></b></h4>
       <p class="fst-italic text-center"><i>
-        Summary:
-As a skilled web developer with experience in front-end and back-end development, I possess a keen eye for design and a passion for creating visually appealing and responsive websites. I have worked on various web development projects, including e-commerce sites, blogs, and corporate websites, and have honed my skills in.Using Css , Html , JavaScript , Frameworks -- Bootstrap Backend -- Php...
+      Summary:
+As a skilled web developer with experience in front-end and back-end development, I possess a keen eye for design and a passion for creating visually appealing and responsive websites. My experience in UX/UI design and website optimization has allowed me to create websites that not only look great but also provide an exceptional user experience. I understand the importance of creating a website that is both functional and visually appealing, and I am always willing to go the extra mile to achieve that perfect balance.
 
-My experience in UX/UI design and website optimization has allowed me to create websites that not only look great but also provide an exceptional user experience. I understand the importance of creating a website that is both functional and visually appealing, and I am always willing to go the extra mile to achieve that perfect balance.
-
-In creating a portfolio website, I understand the significance of showcasing my skills, accomplishments, and personality to potential clients and employers. I will bring my creativity, attention to detail, and passion for web development to create a portfolio website that is unique, impressive, and engaging.
+In creating a portfolio website, I understand the significance of showcasing my skills,and personality to potential clients and employers. I will bring my creativity, attention to detail, and passion for web development to create a portfolio website that is unique, impressive, and engaging.
+     <br> I have worked on various web development projects, including e-commerce sites, blogs, and have honed my skills in.Using Css , Html , JavaScript , Frameworks -- Bootstrap Backend -- Php...
+      </i></p><br>
       </i></p><br>
       <a class="btn btn-primary" href="https://sanunatta.github.io/portfolio//resume.html">Link :::
                 </a>
     </div>
     <div class="col-md-5 order-md-1">
-      <img src="p-2.png" height="400" width="500">
+      <img src="p-2.png" height="350" width="500">
     </div>
   </div>
   <div class="row p-4">
