--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ To obtain a challenging position as a Website Developer for a Hotel Booking Syst
         Familiarity with all day-to-day routine hotel practices, including billing transactions. Contacted maintenance and housekeeping resolving any guest issues.
         1..Prepared shift cash report, balancing payments and disbursements with computer total, preparing the drop envelope for shift end, and balancing accounts.
         2..Processed all reservation requests, changes, and cancellations received by phone, fax, or mail. 
-        3..Identified guest reservation needs and determine appropriate room type.<br>
+        3..Identified guest reservation needs and determine appropriate room type.
         4..Verified availability of room type and rate. Using Css , Html , JavaScript , Frameworks -- Bootstrap , jquery ,Codeigniter Backend -- Next.js , Database- MongoDB...
           </i></p>
     </div>
