--- a/resume.html
+++ b/resume.html
@@ -290,15 +290,15 @@ In creating a portfolio website, I understand the significance of showcasing my 
     <div class="col-lg-8 pt-4 pt-lg-0 content aos-init aos-animate" data-aos="fade-left">
       <h4 class="text-center text-success"><b><i> Hotel Booking System</i></b></h4>
       <p class="fst-italic text-center"><i>
-        Hotel Reservation Agents are responsible for fulfilling reservation requests based on room availability and customer preferences.Provided guests with appropriate room assignments, room keys, directions to rooms, while up selling when suitable.
+        Objective:
+To obtain a challenging position as a Website Developer for a Hotel Booking System where I can utilize my skills and experience to deliver a seamless user experience for customers.
+      Summary::  Hotel Reservation Agents are responsible for fulfilling reservation requests based on room availability and customer preferences.Provided guests with appropriate room assignments, room keys, directions to rooms, while up selling when suitable.
         Answered incoming calls and assisted with reservations, confirmations, room requests, and questions.
-        Familiarity with all day-to-day routine hotel practices, including billing transactions.
-        Contacted maintenance and housekeeping resolving any guest issues.<br>
-        1.Prepared shift cash report, balancing payments and disbursements with computer total, preparing the drop envelope for shift end, and balancing accounts.<br>
-        2.Processed all reservation requests, changes, and cancellations received by phone, fax, or mail. <br>
-        Contacted maintenance and housekeeping resolving any guest issues.<br> 
-        4.Identified guest reservation needs and determine appropriate room type.<br>
-        5.Verified availability of room type and rate. Using Css , Html , JavaScript , Frameworks -- Bootstrap , jquery ,Codeigniter Backend -- Next.js , Database- MongoDB...
+        Familiarity with all day-to-day routine hotel practices, including billing transactions. Contacted maintenance and housekeeping resolving any guest issues.
+        1..Prepared shift cash report, balancing payments and disbursements with computer total, preparing the drop envelope for shift end, and balancing accounts.
+        2..Processed all reservation requests, changes, and cancellations received by phone, fax, or mail. 
+        3..Identified guest reservation needs and determine appropriate room type.
+        4..Verified availability of room type and rate. Using Css , Html , JavaScript , Frameworks -- Bootstrap , jquery ,Codeigniter Backend -- Next.js , Database- MongoDB...
           </i></p>
     </div>
   </div>
