--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         2. To delete the Product.
         3. To update information about the product
         4. To view product
-        User::The user was available able to see the list of products available in the shopping mall . Then he/she can purchase them by using user id and product id. Using Css , Html , JavaScript , Frameworks -- Bootstrap , jquery Backend -- Php , Database- MySql...
+        User::The user was available able to see the list of products available in the shopping mall . Then he/she can purchase them by using user id and product id.<br> Using Css , Html , JavaScript , Frameworks -- Bootstrap , jquery Backend -- Php , Database- MySql...
           </i></p><br>
       <a  class="btn btn-primary" href="https://sanunatta.github.io/onlineshoppingmall/">Link ::
                 </a>
