--- a/resume.html
+++ b/resume.html
@@ -260,7 +260,7 @@
         2. To delete the Product.
         3. To update information about the product
         4. To view product
-        User::The user was available able to see the list of products available in the shopping mall . Then he/she can purchase them by using user id and product id.<br> Using Css , Html , JavaScript , Frameworks -- Bootstrap , jquery Backend -- Php , Database- MySql...
+        User::The user was available able to see the list of products available in the shopping mall . Then he/she can purchase them by using user id and product id.... Using Css , Html , JavaScript , Frameworks -- Bootstrap , jquery Backend -- Php , Database- MySql...
           </i></p><br>
          <a class="btn btn-primary" href="https://sanunatta.github.io/onlineshoppingmall/">Link ::
                 </a>
@@ -280,7 +280,7 @@ In creating a portfolio website, I understand the significance of showcasing my 
                 </a>
     </div>
     <div class="col-md-5 order-md-1">
-      <img src="p-2.png" height="300" width="500">
+      <img src="p-2.png" height="350" width="500">
     </div>
   </div>
   <div class="row p-4">
