--- a/resume.html
+++ b/resume.html
@@ -302,7 +302,31 @@ To obtain a challenging position as a Website Developer for a Hotel Booking Syst
           </i></p>
     </div>
   </div>
-
+ <div class="row featurette p-4 mb-3">
+    <div class="col-md-7 text-center p-4">
+      <h4 class="text-center text-danger"><b><i>Netflix</i></b></h4>
+      <p class="fst-italic text-center"><i>
+        To utilize my skills in web development and user experience design to create a stunning and functional website for Netflix that provides an exceptional user experience and drives engagement.
+        <br>
+        In creating a website for Netflix, I understand the importance of creating a seamless user experience that keeps users engaged and coming back for more. I will bring my creativity, attention to detail, and passion for web development to create a website that is both aesthetically pleasing and highly functional.Using Css , Html ,React , Backend -- Node.js...
+      </i></p>
+    </div>
+    <div class="col-md-5 order-md-1">
+      <img src="net.png" height="200" width="500">
+    </div>
+  </div>
+  <div class="row p-4">
+    <div class="col-lg-4 aos-init aos-animate" data-aos="fade-right">
+      <img src="up.png" class="img-fluid" height="900" width="500">
+    </div>
+    <div class="col-lg-8 pt-4 pt-lg-0 content aos-init aos-animate" data-aos="fade-left">
+      <h4 class="text-center text-warning"><b><i> University Portal</i></b></h4>
+      <p class="fst-italic text-center"><i>
+        To utilize my skills in web development and UX/UI design to create a comprehensive and user-friendly portal website for a university that provides easy access to important information and resources for students, faculty, and staff...<br>
+        In creating a portal website for a university, I understand the importance of creating a seamless user experience that keeps users engaged and provides easy access to important information and resources. I will bring my creativity, attention to detail, and passion for web development to create a website that is both aesthetically pleasing and highly functional. Using Css , Html , JavaScript ,  Backend -- Php , Database- My Sql...
+          </i></p>
+    </div>
+  </div>
 
   <!--Google map-->
   <!--Google map-->
