--- a/index.html
+++ b/index.html
@@ -196,6 +196,8 @@ To obtain a challenging position as a Website Developer for a Hotel Booking Syst
       <img src="net.png" height="200" width="500">
     </div>
   </div>
+<a  class="btn btn-primary" href="https://sanunatta.github.io/Demo-Netflix/">Link ::
+                </a>
   <div class="row p-4">
     <div class="col-lg-4 aos-init aos-animate" data-aos="fade-right">
       <img src="up.png" class="img-fluid" height="900" width="500">
@@ -208,6 +210,8 @@ To obtain a challenging position as a Website Developer for a Hotel Booking Syst
           </i></p>
     </div>
   </div>
+<a  class="btn btn-primary" href="https://sanunatta.github.io/University-Portal/">Link ::
+                </a>
   <!--Google map-->
   <!--Google map-->
   <div id="map-container-google-3" class="z-depth-1-half map-container-3">
