--- a/resume.html
+++ b/resume.html
@@ -311,6 +311,8 @@ To obtain a challenging position as a Website Developer for a Hotel Booking Syst
         In creating a website for Netflix, I understand the importance of creating a seamless user experience that keeps users engaged and coming back for more. I will bring my creativity, attention to detail, and passion for web development to create a website that is both aesthetically pleasing and highly functional.Using Css , Html ,React , Backend -- Node.js...
       </i></p>
     </div>
+   <a class="btn btn-primary" href="https://sanunatta.github.io/Demo-Netflix/">Link ::
+                </a>
     <div class="col-md-5 order-md-1">
       <img src="net.png" height="200" width="500">
     </div>
@@ -327,6 +329,8 @@ To obtain a challenging position as a Website Developer for a Hotel Booking Syst
           </i></p>
     </div>
   </div>
+<a class="btn btn-primary" href="https://sanunatta.github.io/University-Portal/">Link ::
+                </a>
 
   <!--Google map-->
   <!--Google map-->
