--- a/resume.html
+++ b/resume.html
@@ -312,6 +312,7 @@ To obtain a challenging position as a Website Developer for a Hotel Booking Syst
       </i></p>
       <a class="btn btn-primary" href="https://sanunatta.github.io/Demo-Netflix/">Link ::
                 </a>
+       </div>
     </div>
    
     <div class="col-md-5 order-md-1">
@@ -328,9 +329,9 @@ To obtain a challenging position as a Website Developer for a Hotel Booking Syst
         To utilize my skills in web development and UX/UI design to create a comprehensive and user-friendly portal website for a university that provides easy access to important information and resources for students, faculty, and staff...<br>
         In creating a portal website for a university, I understand the importance of creating a seamless user experience that keeps users engaged and provides easy access to important information and resources. I will bring my creativity, attention to detail, and passion for web development to create a website that is both aesthetically pleasing and highly functional. Using Css , Html , JavaScript ,  Backend -- Php , Database- My Sql...
           </i></p>
-      <a class="btn btn-primary" href="https://sanunatta.github.io/University-Portal/">Link ::
-                </a>
     </div>
+    <a class="btn btn-primary" href="https://sanunatta.github.io/University-Portal/">Link ::
+                </a>
   </div>
 
 
