--- a/resume.html
+++ b/resume.html
@@ -310,7 +310,7 @@ To obtain a challenging position as a Website Developer for a Hotel Booking Syst
         <br>
         In creating a website for Netflix, I understand the importance of creating a seamless user experience that keeps users engaged and coming back for more. I will bring my creativity, attention to detail, and passion for web development to create a website that is both aesthetically pleasing and highly functional.Using Css , Html ,React , Backend -- Node.js...
       </i></p>
-      <a class="btn btn-primary" href="https://sanunatta.github.io/netflix/">Link ::
+      <a class="btn btn-primary" href="https://sanunatta.github.io/Demo-Netflix/">Link ::
                 </a>
       </div>
     <div class="col-md-5 order-md-1">
