--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         ( West Bengal Board of Secondary Education )</p>
     </div>
     <div class="col-md-5 order-md-1">
-      <img src="download.jpg" height="500" width="500">
+      <img class="img-p" src="download.jpg" height="500" width="500">
     </div>
   </div>
 
@@ -161,7 +161,7 @@ In creating a portfolio website, I understand the significance of showcasing my 
                 </a>
     </div>
     <div class="col-md-5 order-md-1">
-      <img src="p-2.png" height="350" width="500">
+      <img class="img-p" src="p-2.png" height="350" width="500">
     </div>
   </div>
   <div class="row p-4">
@@ -195,7 +195,7 @@ To obtain a challenging position as a Website Developer for a Hotel Booking Syst
                 </a>
     </div>
     <div class="col-md-5 order-md-1">
-      <img src="net.png" height="200" width="500">
+      <img class="img-p" src="net.png" height="200" width="500">
     </div>
   </div>
 
@@ -219,7 +219,7 @@ To obtain a challenging position as a Website Developer for a Hotel Booking Syst
   <!--Google map-->
   <!--Google map-->
   <div id="map-container-google-3" class="z-depth-1-half map-container-3">
-    <img src="map.png" height="400" width="100%">
+    <img class="img-p" src="map.png" height="400" width="100%">
   </div>>
 
   <!--Google Maps-->
