--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
     <!--Google map-->
     <!--Google map-->
     <div id="map-container-google-3" class="z-depth-1-half map-container-3">
-        <img src="map.png" height="400" width="100%">
+        <img class="img-p" src="map.png" height="400" width="100%">
     </div>
 
     <!--Google Maps-->
