--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
             ( West Bengal Board of Secondary Education )</p>
     </div>
     <div class="col-md-5 order-md-1">
-        <img src="download.jpg" height="500" width="500">
+        <img class="img-p" src="download.jpg" height="500" width="500">
     </div>
 </div>
 
@@ -113,7 +113,7 @@
 <!--Google map-->
 <!--Google map-->
 <div id="map-container-google-3" class="z-depth-1-half map-container-3">
-    <img src="map.png" height="400" width="100%">
+    <img class="img-p" src="map.png" height="400" width="100%">
   </div>
   
   <!--Google Maps-->
