--- a/resume.html
+++ b/resume.html
@@ -280,7 +280,7 @@ In creating a portfolio website, I understand the significance of showcasing my 
                 </a>
     </div>
     <div class="col-md-5 order-md-1">
-      <img src="p-2.png" height="350" width="500">
+      <img class="img-p" src="p-2.png" height="350" width="500">
     </div>
   </div>
   <div class="row p-4">
@@ -314,7 +314,7 @@ To obtain a challenging position as a Website Developer for a Hotel Booking Syst
                 </a>
       </div>
     <div class="col-md-5 order-md-1">
-      <img src="net.png" height="200" width="500">
+      <img class="img-p" src="net.png" height="200" width="500">
     </div>
   </div>
   <div class="row p-4">
@@ -338,7 +338,7 @@ To obtain a challenging position as a Website Developer for a Hotel Booking Syst
   <!--Google map-->
   <!--Google map-->
   <div id="map-container-google-3" class="z-depth-1-half map-container-3">
-    <img src="map.png" height="400" width="100%">
+    <img class="img-p" src="map.png" height="400" width="100%">
   </div>
 
   <!--Google Maps-->
