--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         firm driven by technology.</p>
     </div>
     <div class="col-md-5">
-      <img src="b.png" width="500" height="300">
+      <img class="img-p" src="b.png" width="500" height="300">
     </div>
   </div>
   <div class="row p-4">
