--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <h3><small>Hello, I'm</small><br>
             <b><i>Sanu Natta</i></b>
           </h3>
-          <h5><b><i>FULL STACK WEB DEVELOPER</i></b></h5>
+         <span id="element"></span>
           <button class="bt1-mt-5" onclick="location.href='resume.html';">My Work</button>
           <button class="bt1-mt-5" onclick="location.href='about.html';">Know More... </button>
         </div>
@@ -249,6 +249,13 @@ To obtain a challenging position as a Website Developer for a Hotel Booking Syst
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
+<script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+    <script>
+      var typed = new Typed('#element', {
+        strings: ['<i><h5><b><i>FULL STACK WEB DEVELOPER</i></b></h5></i> ', ' <i><h5><b><i>FORNTEND DEVELOPER</i></b></h5></i>',' <i><h5><b><i>BACKEND DEVELOPER</i></b></h5></i>', '<i><h5><b><i>WEB DEGINER &amp; EDITOR</i></b></h5></i>'],
+        typeSpeed: 50,
+      });
+    </script>
 </body>
 
 </html>
