--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ To obtain a challenging position as a Website Developer for a Hotel Booking Syst
 <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script>
       var typed = new Typed('#element', {
-        strings: ['<i><h5><b><i>FULL STACK WEB DEVELOPER</i></b></h5></i> ', ' <i><h5><b><i>FORNTEND DEVELOPER</i></b></h5></i>',' <i><h5><b><i>BACKEND DEVELOPER</i></b></h5></i>', '<i><h5><b><i>WEB DEGINER &amp; EDITOR</i></b></h5></i>','<i><h5><b><i>FULL STACK WEB DEVELOPER</i></b></h5></i> ', ' <i><h5><b><i>FORNTEND DEVELOPER</i></b></h5></i>',' <i><h5><b><i>BACKEND DEVELOPER</i></b></h5></i>', '<i><h5><b><i>WEB DEGINER &amp; EDITOR</i></b></h5></i>'],
+        strings: ['<i><h5><b><i>FULL STACK DEVELOPER</i></b></h5></i> ', ' <i><h5><b><i>FORNTEND DEVELOPER</i></b></h5></i>',' <i><h5><b><i>BACKEND DEVELOPER</i></b></h5></i>', '<i><h5><b><i>WEB DEGINER &amp; EDITOR</i></b></h5></i>','<i><h5><b><i>FULL STACK DEVELOPER</i></b></h5></i> ', ' <i><h5><b><i>FORNTEND DEVELOPER</i></b></h5></i>',' <i><h5><b><i>BACKEND DEVELOPER</i></b></h5></i>', '<i><h5><b><i>WEB DEGINER &amp; EDITOR</i></b></h5></i>'],
         typeSpeed: 50,
       });
     </script>
