--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ To obtain a challenging position as a Website Developer for a Hotel Booking Syst
   <!--Google map-->
   <!--Google map-->
   <div id="map-container-google-3" class="z-depth-1-half map-container-3">
-    <img class="img-p" src="map.png" height="400" width="100%">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29416.17436251788!2d88.63191635700802!3d22.838683126827696!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f8b05b5bbc32af%3A0x1c137b4a7842c5fc!2sHabra%2C%20West%20Bengal!5e0!3m2!1sen!2sin!4v1684994107543!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>>
 
   <!--Google Maps-->
