--- a/resume.html
+++ b/resume.html
@@ -333,8 +333,21 @@ To obtain a challenging position as a Website Developer for a Hotel Booking Syst
                 </a>
     </div>
   </div>
- 
-
+ div class="row featurette p-4 mb-3">
+    <div class="col-md-7 text-center p-4">
+      <h4 class="text-center text-danger"><b><i>News Application</i></b></h4>
+      <p class="fst-italic text-center"><i>
+        To utilize my skills in web development and user experience design to create a stunning and functional website for Netflix that provides an exceptional user experience and drives engagement.
+        <br>
+        In creating a website for Netflix, I understand the importance of creating a seamless user experience that keeps users engaged and coming back for more. I will bring my creativity, attention to detail, and passion for web development to create a website that is both aesthetically pleasing and highly functional.Using Css , Html ,React , Backend -- Node.js...
+      </i></p>
+      <a class="btn btn-primary" href="https://sanunatta.github.io/Demo-Netflix/">Link ::
+                </a>
+      </div>
+<div class="col-md-5 order-md-1">
+      <img class="img-p" src="news.png" height="200" width="500">
+    </div>
+  </div>
 
 
   <!--Google map-->
