--- a/resume.html
+++ b/resume.html
@@ -335,7 +335,7 @@ To obtain a challenging position as a Website Developer for a Hotel Booking Syst
   </div>
  <div class="row featurette p-4 mb-3">
     <div class="col-md-7 text-center p-4">
-      <h4 class="text-center text-danger"><b><i>News Application</i></b></h4>
+      <h4 class="text-center text-success"><b><i>News Application</i></b></h4>
       <p class="fst-italic text-center"><i>
         I had created of this project was to design and develop a responsive and user-friendly news website using HTML, CSS, and JavaScript. The website aimed to provide a platform for delivering up-to-date news articles to users in an organized and visually appealing manner.
         <br>
@@ -345,7 +345,7 @@ To obtain a challenging position as a Website Developer for a Hotel Booking Syst
                 </a>
       </div>
 <div class="col-md-5 order-md-1">
-      <img class="img-p" src="news.png" height="200" width="500">
+      <img class="img-p" src="news.png" height="300" width="500">
     </div>
   </div>
 
